--- a/Greenshot.Plugin.Win10/Greenshot.Plugin.Win10.csproj
+++ b/Greenshot.Plugin.Win10/Greenshot.Plugin.Win10.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows10.0.19041</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <None Include="Languages\language*.xml">
