--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -12,6 +12,10 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 7.0.x
+        
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 4.7.x
 
     - uses: microsoft/setup-msbuild@v1.1
 
@@ -36,6 +40,6 @@ jobs:
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         files: |
-          D:\a\Greenshot\Greenshot\bin\Release\net7.0-windows\publish\*
+          D:/a/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
