--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -20,17 +20,22 @@ jobs:
     - name: Restore, Build and Publish
       run: |
         dotnet publish -c Release
-                
+                        
     - name: Generate release tag
-      id: tag
-      run: |
-        echo "::set-output name=release_tag::Release_$(date +"%Y.%m.%d_%H-%M")"
+      run: echo "release_tag=Release_$(date +"%Y.%m.%d_%H-%M")" >> $GITHUB_OUTPUT
+    
+    - name: Zip Release
+      uses: TheDoctor0/zip-release@0.7.1
+      with:
+        filename: Release.zip
+        path: D:/a/Greenshot/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/*
+        
         
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         files: |
-          D:/a/Greenshot/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/*
+          D:/a/Greenshot/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/Release.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
