--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -30,11 +30,10 @@ jobs:
         filename: Release.zip
         path: D:/a/Greenshot/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/*
         
-        
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
+        tag_name: "${{ env.release_tag }}"
         files: |
           D:/a/Greenshot/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/Release.zip
       env:
