--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -23,8 +23,8 @@ jobs:
                         
     - name: Generate release tag
       run: |
-        echo "release_tag=Release_$(date +"%Y.%m.%d_%H-%M")" >> $GITHUB_ENV
-    
+        echo "release_tag=(Get-Date).ToString("yyyy.MM.dd_HH-mm")" >> $GITHUB_ENV
+
     - name: Zip Release
       uses: TheDoctor0/zip-release@0.7.1
       with:
