--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -22,8 +22,13 @@ jobs:
         dotnet publish -c Release
                         
     - name: Generate release tag
+      id: tag
       run: |
+        echo "(Get-Date).ToString("yyyy.MM.dd_HH-mm")"
+        echo "release_tag=(Get-Date).ToString("yyyy.MM.dd_HH-mm")"
         echo "release_tag=(Get-Date).ToString("yyyy.MM.dd_HH-mm")" >> $GITHUB_ENV
+        echo "$date"
+        echo "::set-output name=release_tag::Release_$(date +"%Y.%m.%d_%H-%M")"
 
     - name: Zip Release
       uses: TheDoctor0/zip-release@0.7.1
@@ -34,7 +39,7 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: "${{ env.release_tag }}"
+        tag_name: ${{ steps.tag.outputs.release_tag }}
         files: |
           D:/a/Greenshot/Greenshot/Greenshot/bin/Release/net7.0-windows/publish/Release.zip
       env:
