--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,12 @@ jobs:
     - name: Set the value
       id: step_one
       run: |
-        echo "action_state=yellow" >> $GITHUB_ENV
+        echo "action_state=yellow" | Out-File -FilePath $env:GITHUB_ENV -Append # no need for -Encoding utf8
 
     - name: Set the value
       id: step_one_date
       run: |
-        echo "release_tag=Release_$(date +"%Y.%m.%d_%H-%M")" >> $GITHUB_ENV
+        echo "release_tag=Release_$(date +"%Y.%m.%d_%H-%M")" | Out-File -FilePath $env:GITHUB_ENV -Append
 
     - name: Use the value
       id: step_two
@@ -27,3 +27,4 @@ jobs:
       id: step_two_date
       run: |
         echo "${{ env.release_tag }}"
+        
