--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,18 +11,24 @@ jobs:
     - name: Set the value
       id: step_one
       run: |
-        echo "action_state=yellow" | Out-File -FilePath $env:GITHUB_ENV -Append # no need for -Encoding utf8
-
-    - name: Set the value
-      id: step_one_date
-      run: |
-        echo "release_tag=Release_$(date +"%Y.%m.%d_%H-%M")" | Out-File -FilePath $env:GITHUB_ENV -Append
+        echo "action_state=yellow" >> $env:GITHUB_ENV
 
     - name: Use the value
       id: step_two
       run: |
-        echo "${{ env.action_state }}" # This will output 'yellow'
-
+        echo $env:action_state
+        
+    - name: Use the value
+      id: step_two2
+      run: |
+        echo "${{ env.action_state }}"
+        
+        
+    - name: Set the value
+      id: step_one_date
+      run: |
+        echo "release_tag=Release_$(date +"%Y.%m.%d_%H-%M")" | Out-File -FilePath $env:GITHUB_ENV -Append
+        
     - name: Use the value
       id: step_two_date
       run: |
