--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Restore, Build and Publish
       run: |
-        dotnet publish -c Release -p:PublishDir=$env:RUNNER_TEMP/publish
+        dotnet publish -c Release -p:PublishDir=$env:RUNNER_TEMP\publish
                         
     - name: Generate release tag
       id: tag
@@ -30,7 +30,7 @@ jobs:
       uses: TheDoctor0/zip-release@0.7.1
       with:
         filename: Release.zip
-        directory: ${{ runner.temp }}/publish
+        directory: ${{ runner.temp }}\publish
         
     - name: Release
       uses: softprops/action-gh-release@v1
